tests/baselines/reference/inlineJsxFactoryWithFragmentIsError.errors.txt
index.tsx(3,1): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
index.tsx(3,1): error TS2879: Using JSX fragments requires fragment factory 'React' to be in scope, but it could not be found.
index.tsx(3,1): error TS17017: An @jsxFrag pragma is required when using an @jsx pragma with JSX fragments.
reacty.tsx(3,1): error TS17017: An @jsxFrag pragma is required when using an @jsx pragma with JSX fragments.


==== renderer.d.ts (0 errors) ====
    declare global {
        namespace JSX {
            interface IntrinsicElements {
                [e: string]: any;
            }
        }
    }
    export function dom(): void;
    export function createElement(): void;
==== reacty.tsx (1 errors) ====
    /** @jsx React.createElement */
    import * as React from "./renderer";
    <><h></h></>
    ~~~~~~~~~~~~
!!! error TS17017: An @jsxFrag pragma is required when using an @jsx pragma with JSX fragments.
==== index.tsx (3 errors) ====
    /** @jsx dom */
    import { dom } from "./renderer";
    <><h></h></>
    ~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    ~~
!!! error TS2879: Using JSX fragments requires fragment factory 'React' to be in scope, but it could not be found.
    ~~~~~~~~~~~~
!!! error TS17017: An @jsxFrag pragma is required when using an @jsx pragma with JSX fragments.